--- a/.github/workflows/get-repoData.yml
+++ b/.github/workflows/get-repoData.yml
@@ -10,7 +10,8 @@ run-name: Getting repo data for personal website
 on:
   push:
     branches:
-      - "**"
+      - "main"
+      - "for-personal-website"
 
 
 
